<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.slideshow.BonusesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/count_of_bonuses_button"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textAllCaps="true"
            tools:text="на балансе 674 бонусов"
            android:layout_margin="@dimen/home_fragment_base_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/what_is_bonuses_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_is_bonuses_questions_text"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_margin="@dimen/home_fragment_base_margin"
            app:layout_constraintTop_toBottomOf="@id/count_of_bonuses_button"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/bonuses_description_text_view"
            android:text="@string/bonuses_description_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/home_fragment_base_margin"
            app:layout_constraintTop_toBottomOf="@id/what_is_bonuses_text_view"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/bonuses_equals_trips_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bonuses_equals_trips_text"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:layout_margin="@dimen/home_fragment_base_margin"
            app:layout_constraintTop_toBottomOf="@id/bonuses_description_text_view"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:id="@+id/bonuses_burns"
            android:text="@string/bonuses_burns_text"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/home_fragment_base_margin"
            app:layout_constraintTop_toBottomOf="@id/bonuses_equals_trips_text_view"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/bonuses_burn_requirements_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bonuses_burn_requirements_text"
            android:layout_margin="@dimen/home_fragment_base_margin"
            app:layout_constraintTop_toBottomOf="@id/bonuses_burns"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <include
            android:id="@+id/bonuses_bottom_info"
            layout="@layout/bottom_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/home_fragment_base_margin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bonuses_burn_requirements_text_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>