<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/home_fragment_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/home_fragment_base_margin"
        android:text="@string/home_title_text"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/home_fragment_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/home_fragment_base_margin"
        android:layout_marginBottom="@dimen/home_fragment_base_margin"
        android:text="@string/home_fragment_subtitle_text"
        android:textAlignment="center"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/home_fragment_title" />

    <TextView
        android:id="@+id/home_fragment_direction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/home_fragment_base_margin"
        android:text="@string/choose_direction"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/home_fragment_subtitle" />

    <Spinner
        android:id="@+id/direction_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/home_fragment_base_margin"
        android:minHeight="48dp"
        android:spinnerMode="dropdown"
        android:stateListAnimator="@drawable/spinner_sla"
        android:background="@drawable/spinner_bg"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/home_fragment_direction" />


</androidx.constraintlayout.widget.ConstraintLayout>